# plaid

./: Cargo.toml  Readme.md
plaid/: Cargo.toml
plaid-cors-middleware/: Cargo.toml  README.md
plaid-cors-middleware/src/: lib.rs
plaid-macros/: Cargo.toml  README.md
plaid-macros/src/: handler.rs  lib.rs  route_definition.rs
plaid-request-id-middleware/: Cargo.toml  README.md
plaid-request-id-middleware/src/: lib.rs
plaid/src/: context.rs  handlers.rs  lib.rs  middleware.rs  responses.rs  routes.rs  server.rs
plaid/src/routes/: macros.rs  tree.rs
plaid/src/server/: service.rs
