[package]
name = "plaid-macros"
version = "0.1.0"
authors = ["Elliott Clarke <elliott.clarke.ext@siemens.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
darling = "0.12"
heck = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
schemars = {version = "0.8", features = ["chrono"]}
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", features = ["full"]}